# arrsin

./: .gitmodules  CMakeLists.txt  README.md  report.odg  report.pl  report.py  setup.py
cmake/Modules/: CMakeDPCXXInformation.cmake  CMakeDetermineNVHPCCompiler.cmake  CMakeNVHPCInformation.cmake  CMakeTestDPCXXCompiler.cmake  CMakeTestNVHPCCompiler.cmake  FindIntelDPCXX.cmake  FindNvidiaHpcSDK.cmake
src/tests/: CMakeLists.txt  arrsin.cpp  arrsin_nvpar.cpp  arrsin_par.cpp  arrsin_par_xsimd.cpp  arrsin_sycl.cpp  arrsin_xsimd.cpp
tests/: CMakeLists.txt  arrsin.cpp  arrsin.py  arrsin_par.cpp  arrsin_par_xsimd.cpp  arrsin_xsimd.cpp
